3.2.8
	+ Added defensive code to DNSResolver to avoid ifaces down after crash
3.2.7
	+ Changed validation of setDHCPAddress, setRealPPPIface and
	  DHCPCleanUp to allow pseudoterminal interfaces, this is needed for l2tp
	+ Allow network proxy which is listening on localhost
3.2.6
	+ Specifiy local address in failover tests to avoid vlan interface problems
	+ Fix Dynamic DNS with Zentyal Remote as provider when the
	  registration wizard is done
3.2.5
	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
	+ Don't generate resolvconf file until all interfaces are up
	+ nameservers() method always return 127.0.0.1 if DNS module is
	  installed and enabled
	+ Fixed dhclient configuration
	+ Fixed some issues with showing of DHCP nameservers and removed
	  related dead code
	+ Don't use owner module in external-ip.pl script
	+ Changed failover firewall rules to not use owner module
	+ Fixed bug which made impossible to edit pppoe gateways
3.2.4
	+ Update strings to new offering
	+ ppp-set-iface.pl script should not regen gateway if we are saving changes
	+ Flush interfaces list cache after all ifups and all ifdowns
	+ Added missing EBox::Exceptions uses
3.2.3
	+ Write resolvconf head, base and tail
	+ Set proper file name for HTTP proxy configuration for APT
	+ Set HTTP proxy wide settings in /etc/environment
	+ Do not disable DNSResolver model when users mode is external AD
	+ Added resolvconf as dependency to avoid problems in installations
	  without the ubuntu-minimal metapackage
3.2.2
	+ Fixed search domain regression after resolvconf changes
3.2.1
	+ Use new resolvconf framework to manage resolvers list
	+ Fix setNameservers method in Network to avoid error in import
	  interfaces
3.2
	+ Set version to 3.2
3.1.6
	+ Guard against undefined rows getting auto value in GatewayTable
3.1.5
	+ Fix addition of gateways in initial configuration wizard
	+ Override daemons when migrating from 3.0
3.1.4
	+ Adapted to new CSS styles