@@ -1,3 +1,5 @@
+HEAD
+	+ Check external IP against different providers to be more reliable
 3.2.8
 	+ Added defensive code to DNSResolver to avoid ifaces down after crash
 3.2.7
